--- a/view/asset/style.css
+++ b/view/asset/style.css
@@ -3,8 +3,8 @@
     max-width: 1273px;
     margin: 0 auto;
 }
-.wrapper{
-
+body{
+    margin: 0;
 }
 
 .header_top{
@@ -107,13 +107,6 @@ li{
     display: flex !important;
     justify-content: space-between;
 }
-.header_top-user{
-   
-} 
-.header_top-user a{
-   
-}
-
 .header_bottom{
     padding: 30px 0;
     position: fixed;
@@ -121,7 +114,8 @@ li{
     width: 100%;
     left: 0;
     right: 0;
-
+    z-index: 12;
+    background-color: white;
 }
 .header_bottom-left nav{
     column-gap: 30px;
@@ -131,12 +125,11 @@ li{
     color:rgb(120, 111, 111) !important;
     font-size: 15px;
     font-weight: 500;
+    text-decoration: none !important;
    
   
 }
-.header_bottom-left {
-  
-}
+
 .logo{
     width: 165px;
 
@@ -144,7 +137,363 @@ li{
 /* Xử lý main */
 main{
     padding-top: 90px;
+    padding-bottom: 80px;
 }
+.banner img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.seach_room{
+  
+    background-color: white;
+    box-shadow: 0px 0px 3px #549d93;
+    position: relative;
+    z-index: 10;
+    margin-left: 56px;
+    margin-right: 59px;
+    border-radius: 6px;
+    padding: 8px 20px;
+    margin-top: -30px;
+    color: #549d93;
+    
+}
+.form_seach-room {
+    display: flex;
+    column-gap: 20px;
+    align-items: center;
+}
+.form_seach-room
+.form_group{
+    display: flex;
+    flex-direction: column;
+    font-weight: 700;
+}
+.seach_room h4{
+    font-size: 20px;
+    font-weight: 600;
+    color: black;
+}
+.form_seach-room
+.form_group input{
+    width: 250px;
+    height: 34px;
+}
+.form_seach-room .form_group select {
+    width: 200px;
+    height: 34px;
+    background-color: white;
+    border: 1px solid #549d93;
+}
+input {
+    outline: none;
+    transition: all 0.25s;
+}
+input:hover{
+    border: 1px solid #53efd9;
+}
+.form_seach-room input[type="submit"]{
+    height: 35px;
+    background-color: #549d93;
+    margin-top: 10px;
+    width: 100px;
+    border: 1px solid #53efd9;
+    color: white;
+    font-weight: 700;
+    border-radius: 4px;
+    margin-top: -13px;
+
+    
+}
+.create_room{
+    width: 200px;
+}
+
+.home_introduction{
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: 6fr 6fr;
+    column-gap: 30px;
+    margin-bottom: 20px;
+    border: 1px solid #53efd9;
+    align-items: center;
+    
+}
+.home_introduction-left img{
+    width: 100%;
+    height: 90%;
+    object-fit: contain;
+}
+.home_introduction-right{
+    padding: 5px 0;
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+}
+.home_introduction-right h3{
+    color: black;
+    font-size: 30px;
+    font-weight: 700;
+    font-style: normal;
+    margin-top: 20px;
+}
+.home_introduction-right span{
+    display: block;
+    color: black;
+    font-weight: 700;
+    line-height: 14px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+.home_introduction-right  p {
+    text-align: justify;
+    font-size: 15px;
+    max-width: 587px;
+
+}
+.room{
+    background-color: #f3f3f3;
+}
+.room_service img{
+    width: 26px;
+    height: 26px;
+    object-fit: contain;
+}
+.room .wrapper .row{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 24px;
+}
+.room>.wrapper>.row>.col>article {
+    position: relative;
+    background-color: #fff;
+    box-shadow: 0 1px 2px 0 rgb(149 129 129 / 50%);
+    margin-bottom: 20px;
+    text-align: center;
+    border-radius: 2px;
+    overflow: hidden !important;
+}
+.room .wrapper .row .col article .room_name{
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 22px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    white-space: unset;
+    max-height: 22px;
+    margin-bottom: 10px;
+    margin-top: 5px;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-style: normal;
+    transition: 0.25s linear;
+    color: #323c42 !important;
+    text-decoration: none;
+    font-weight: 700;
+   
+}
+.room_name:hover{
+  color: #549d93 !important;
+}
+.room_title{
+    text-align: center !important;
+    padding-top: 12px;
+    position: relative;
+    font-size: 22px;
+    font-weight: 700;
+    margin-bottom: 40px;
+    text-transform: uppercase;
+}
+.room_title::before{
+    content: "";
+    position: absolute;
+    width: 130px;
+    left: 50%;
+    bottom: -7px;
+    transform: translateX(-50%);
+    border: 0.2px solid #323c42 !important;
+
+}
+.room_title::after{
+    content: "";
+    position: absolute;
+    width: 130px;
+    left: 50%;
+    bottom: -10px;
+    transform: translateX(-50%);
+    border: 0.2px solid #323c42 !important;
+
+}
+.room .wrapper .row .col article a h2:hover{
+    color: var(--background-color-btn) !important;
+}
+.room_img {
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.room_buy{
+    margin-top: 20px;
+    align-items: center;
+    display: flex !important;
+    justify-content: space-between;
+    padding: 0 10px 5px 10px !important;
+}
+.room_services {
+    margin: 4px 0;
+}
+.room_service img{
+    margin-left: 12px;
+}
+.room_information{
+        margin-top: 5px;
+}
+.room_information span {
+  margin-right: 10px;
+  font-size: 15px;
+  
+ 
+
+}
+.room_buy .room_price{
+    color: #c40025;
+    font-size: 19px;
+    font-weight: 700;
+}
+.room_buy-form input[type="submit"]{
+    background-color: #fff;
+    color: #c40025;
+    border: 1px solid #c40025;
+    padding: 5px 10px;
+    text-transform: capitalize;
+    cursor: pointer;
+}
+.room_buy-form input[type="submit"]:hover{
+    background-color: #c40025;
+    color: white;
+}
+
+.room_content .row{
+    display: grid;
+    grid-template-columns: 5fr 7fr !important;
+    column-gap: 12px;
+}
+.room_vip-img{
+    width: 100%;
+    height: 250px;
+}
+
+
+.room_vip-service{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 12px;
+    margin-bottom: 10px;
+    padding: 0 10px;
+}
+.room_vip-service>section>span>img{
+    margin-right: 7px;
+}
+.room_vip-title{
+    padding: 0 10px;
+}
+.room_vip-infomation{
+    display: flex;
+    column-gap: 12px;
+  
+    
+}
+.room_vip-description{
+    padding: 0 10px;
+    display: block;
+    text-align: justify;
+}
+.room_vip-infomation span{
+    display: flex;
+    align-items: center;
+    
+}
+.room_vip-infomation img{
+    width: 26px;
+    height: 26px;
+    object-fit: contain;
+    
+}
+.room_content>.row>.col-5>article{
+    border: 1px solid #ccc;
+    padding-bottom: 12px;
+}
+.room_content>.row>.col-5>article>form{
+    padding: 0 10px;
+    margin-top: 12px;
+}
+.room_content>.row>.col-5>article>form>input[type="submit"]{
+    background-color: #fff;
+    color: #c40025;
+    border: 1px solid #c40025;
+    padding: 5px 10px;
+    text-transform: capitalize;
+    cursor: pointer;
+}
+.room_content>.row>.col-5>article>form>input[type="submit"]:hover{
+   color: white;
+   background-color: #c40025;
+}
+
+.room_vip{
+    background-color: white;
+}
+.room_vip-left>.row{
+    display: grid;
+    grid-template-columns: 1fr 1fr !important;
+}
+.room_vip-left>.row>.col>article{
+    position: relative;
+}
+.room_vip-left>.row>.col>article>.room_vip-infomation{
+    position: absolute;
+    bottom: 20px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    column-gap: 18px;
+    align-items: center;
+  
+}
+.room_vip-left>.row>.col>article>.room_vip-infomation>.room_vip-name{
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: normal;
+    margin-right: 20px;
+    display: block;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    color: white;
+    text-decoration: none;
+}
+.room_vip-left>.row>.col>article>.room_vip-infomation>.room_vip-name:hover{
+    color: gold !important;
+}
+.room_vip-left>.row>.col>article>.room_vip-infomation>.room_vip-price{
+    color: white;
+    background-color: #c40025;
+    display: block;
+    padding: 10px;
+    text-decoration: none !important;
+    border: 1px solid #c40025;
+}
+.room_vip-left>.row>.col>article>a>img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+/* Footer */
 footer{ 
     padding-top: 20px;
     padding-bottom: 20px;
@@ -165,4 +514,7 @@ footer{
 .footer_item-text:hover{
     color: #0d2c28 !important;
     text-decoration: none;
+}
+.footer_item-list{
+    padding: 0 !important;
 }
