--- a/view/asset/style.css
+++ b/view/asset/style.css
@@ -624,6 +624,55 @@ input:hover{
   position: absolute;
 
 }   
+/* my hotel */
+.wrapper{
+
+}
+.my_hotel{
+
+}
+.my_hotel-task{
+    padding: 10px 0;
+    margin-top: 10px;
+}
+.my_hotel-task>.wrapper{
+    display: flex;
+    column-gap: 7px;
+    align-items: center;
+}
+.my_hotel-task>.wrapper>a{
+    color: #0d2c28;
+    text-transform: capitalize;
+    text-decoration: none !important;
+}
+.my_hotel-task>.wrapper>i{
+    color: #0d2c28;
+    font-size: 14px;
+    
+}
+.my_hotel-task>.wrapper>a:last-child{
+    color: #c40025;
+}
+
+.my_hotel{
+
+}
+.my_hotel-title{
+    text-transform: uppercase;
+    font-size: 18px;
+}
+.mu_hotel-content{
+
+}
+.mu_hotel-content img{
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+}
+.mu_hotel-content>p{
+    text-align: justify;
+    line-height: 20px;
+}
 /* Footer */
 footer{ 
     padding-top: 20px;
