--- a/public/base.css
+++ b/public/base.css
@@ -1,5 +1,5 @@
 :root{
     --background-color-btn:#3cbaa8;
-    --primay-font : 'Roboto', sans-serif;
+    --primay-font : 'Poppins', sans-serif;;
     
 }
