--- a/style.css
+++ b/style.css
@@ -1,23 +1,27 @@
 body {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 .form {
-    background-color: #f0f0f0;
-    padding: 20px;
+  background-color: #f0f0f0;
+  padding: 20px;
 }
 
-input,
-textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+.form--lienhe input[type="text"],
+.form--lienhe input[type="email"],
+.form--lienhe textarea {
+  width: 100%;
+  padding: 10px 0;
+  /* padding-left: 10px; */
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin: 5px 0;
 }
 
-input[type="submit"] {
-    background-color: #000;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 5px;
+.form--lienhe input[type="submit"] {
+  width: 100%;
+  background-color: #000;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 5px;
 }
