--- a/public/admin.css
+++ b/public/admin.css
@@ -160,18 +160,6 @@ table{
     border-radius: 2rem;
     margin-bottom: 20px;
 }
-.table-category tr:nth-child(2n) th:nth-child(1){
-    width: 10%;
-}
-.table-category tr:nth-child(2n) th:nth-child(2){
-    width: 20%;
-}
-.table-category tr:nth-child(2n) th:nth-child(3){
-    width: 45%;
-}
-.table-category tr:nth-child(2n) th:nth-child(4){
-    width: 25%;
-}
 table tr th{
     font-size: 0.9rem;
     color: #192A3E;
@@ -179,6 +167,7 @@ table tr th{
     border-bottom: 1px solid #ccccccd2;
     font-size: 14px;
     font-weight: 500;
+    text-align: center;
 }
 table tr:nth-child(1){
   color: #192A3E;
@@ -441,7 +430,25 @@ form h1{
     flex-direction: column;
     
 }
+.room_input-avatar>img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: 1px solid #ccc;
+}
+.form_show-image>div>img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 .form-group_avatar{
     display: flex;
     flex-direction: column;
+}
+.service_list{
+    margin-top: 12px;
+    margin-bottom: 12px;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 100px;
 }
