--- a/public/admin.css
+++ b/public/admin.css
@@ -350,7 +350,7 @@ form h1{
     background-color: white;
     padding-right: 20px;
     font-size: 14px;
-    margin-bottom: 12px;
+    padding: 5px 10px;
 }
 .tk_sp span {
     color: #152C70;
@@ -360,7 +360,7 @@ form h1{
 background: white;
   padding-top: 20px;
   padding-bottom: 17px;
-
+  padding-right: 25px;
   display: flex;
   justify-content: end;
   column-gap: 4px;
@@ -436,6 +436,17 @@ form h1{
     object-fit: cover;
     border: 1px solid #ccc;
 }
+.form_show-image>div{
+    position: relative;
+}
+.form_show-image>div>a{
+    position: absolute;
+    top: 0;
+    padding: 5px 10px;
+    background-color: #109CF1;
+    color: white;
+    text-decoration:  none;
+}
 .form_show-image>div>img{
     width: 100%;
     height: 100%;
@@ -451,4 +462,8 @@ form h1{
     display: flex;
     flex-wrap: wrap;
     column-gap: 100px;
+}
+.form_group{
+    margin-bottom: 14px !important;
+    padding: 0;
 }
