--- a/public/style1.css
+++ b/public/style1.css
@@ -259,3 +259,10 @@ main .banner_room img {
 .profile_user-left ul {
   line-height: 2;
 }
+/* Thông báo lỗi form đổi mật khẩu */
+.err-sussces {
+  color: green;
+}
+.err-failed {
+  color: red;
+}
