--- a/public/style1.css
+++ b/public/style1.css
@@ -108,6 +108,16 @@ main .banner_room img {
   margin-left: 10px;
   height: auto !important;
 }
+.notification , .notification_eror{
+  margin-top: 12px;
+
+}
+.notification>p{
+  font-weight: 600;
+}
+.notification>p>span{
+  font-weight: 400;
+}
 .price_booking span {
   display: block;
   color: red;
@@ -289,4 +299,70 @@ main .banner_room img {
 .err-failed,
 .error_message {
   color: red;
+}
+/* billcomfirm */
+.congratulations{
+  text-align: center;
+
+}
+.cart_list{
+  padding-top: 12px;
+}
+.cart_list-title{
+  font-size: 23px;
+  text-transform: capitalize;
+  font-weight: 600;
+  color: #231f20;
+  margin-bottom: 20px;
+}
+.congratulations span{
+  display: block;
+  margin-top: 12px;
+  font-size: 25px;
+  text-transform:capitalize;
+  color: #186F65;
+  font-weight: 600;
+  text-shadow: 0px  0px 5px #186F65;
+
+}
+.congratulations svg{
+  width: 100px;
+  height: 100px;
+  color: green;
+}
+.infomation{
+margin-top: 12px;
+flex: 1;
+}
+.infomation table{
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  
+}
+.infomation table tr td{
+  padding: 6px;
+  font-size: 14px;
+  padding-left: 12px;
+  color: #b8332c;
+
+
+}
+.infomation table tr td:nth-child(2n){
+  text-align: end;
+  color: #231f20;
+}
+.infomation table tr{
+  border-bottom: 1px solid #ccc;
+}
+.infomation_title{
+  font-size: 15px;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 2px;
+
+}
+.information_content{
+  display: flex;
+  column-gap: 100px;
+  margin-top: 20px;
 }
