--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   font-size: 16px;
 }
 
@@ -7,13 +7,6 @@ body {
   padding: 20px;
 }
 
-input,
-textarea {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
 
 input[type="submit"] {
   background-color: #000;
@@ -23,4 +16,4 @@ input[type="submit"] {
 }
 .wrapper1 {
   padding: 10px 0;
-}
+} */
