--- a/public/style1.css
+++ b/public/style1.css
@@ -39,7 +39,7 @@ main .banner_room img {
   padding: 0 10px;
   text-align: justify;
 }
-.room_services_content{
+.room_services_content {
   margin-top: 20px;
 }
 
@@ -63,20 +63,19 @@ main .banner_room img {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   padding: 3px 10px;
-  
 }
-.box_services>.item_services {
+.box_services > .item_services {
   display: flex;
   padding: 10px 0;
   column-gap: 12px;
   align-items: center;
 }
-.box_services>.item_services img {
+.box_services > .item_services img {
   width: 35px;
   height: 35px;
   object-fit: contain;
 }
-.box_services>.item_services span {
+.box_services > .item_services span {
   font-size: 20px;
   padding-top: 10px;
 }
@@ -108,14 +107,14 @@ main .banner_room img {
   margin-left: 10px;
   height: auto !important;
 }
-.notification , .notification_eror{
+.notification,
+.notification_eror {
   margin-top: 12px;
-
 }
-.notification>p{
+.notification > p {
   font-weight: 600;
 }
-.notification>p>span{
+.notification > p > span {
   font-weight: 400;
 }
 .price_booking span {
@@ -133,11 +132,11 @@ main .banner_room img {
   grid-gap: 20px;
   margin-top: 10px;
 }
-#form-book >.notification{
-  display: none ;
+#form-book > .notification {
+  display: none;
 }
-#form-book >.notification_eror{
-  display: none ;
+#form-book > .notification_eror {
+  display: none;
 }
 .item_booking label {
   display: inline-block !important;
@@ -154,8 +153,8 @@ main .banner_room img {
   border-radius: 5px;
   height: 32px;
 }
-.item_booking .eror_messsage{
-  margin: 5px 0 0 0 ;
+.item_booking .eror_messsage {
+  margin: 5px 0 0 0;
   color: #cd9a2b;
 }
 .form_booking button {
@@ -198,9 +197,9 @@ main .banner_room img {
   margin-bottom: 50px;
 }
 .room__item {
-  border: 1px solid;
+  border: 1px solid #ccc;
   padding: 20px;
-  box-shadow: 5px 10px 8px #888888;
+  box-shadow: 1px 2px 3px #ccc;
   background-color: #fff;
 }
 .room__item a {
@@ -301,67 +300,61 @@ main .banner_room img {
   color: red;
 }
 /* billcomfirm */
-.congratulations{
+.congratulations {
   text-align: center;
-
 }
-.cart_list{
+.cart_list {
   padding-top: 12px;
 }
-.cart_list-title{
+.cart_list-title {
   font-size: 23px;
   text-transform: capitalize;
   font-weight: 600;
   color: #231f20;
   margin-bottom: 20px;
 }
-.congratulations span{
+.congratulations span {
   display: block;
   margin-top: 12px;
   font-size: 25px;
-  text-transform:capitalize;
-  color: #186F65;
+  text-transform: capitalize;
+  color: #186f65;
   font-weight: 600;
-  text-shadow: 0px  0px 5px #186F65;
-
+  text-shadow: 0px 0px 5px #186f65;
 }
-.congratulations svg{
+.congratulations svg {
   width: 100px;
   height: 100px;
   color: green;
 }
-.infomation{
-margin-top: 12px;
-flex: 1;
+.infomation {
+  margin-top: 12px;
+  flex: 1;
 }
-.infomation table{
+.infomation table {
   width: 100%;
   margin-top: 10px;
   margin-bottom: 15px;
-  
 }
-.infomation table tr td{
+.infomation table tr td {
   padding: 6px;
   font-size: 14px;
   padding-left: 12px;
   color: #b8332c;
-
-
 }
-.infomation table tr td:nth-child(2n){
+.infomation table tr td:nth-child(2n) {
   text-align: end;
   color: #231f20;
 }
-.infomation table tr{
+.infomation table tr {
   border-bottom: 1px solid #ccc;
 }
-.infomation_title{
+.infomation_title {
   font-size: 15px;
   border-bottom: 1px solid #ccc;
   padding-bottom: 2px;
-
 }
-.information_content{
+.information_content {
   display: flex;
   column-gap: 100px;
   margin-top: 20px;
