--- a/public/style1.css
+++ b/public/style1.css
@@ -10,6 +10,10 @@ main .banner_room img {
   height: 400px;
   object-fit: cover;
 }
+main .banner_room h2 {
+  margin: 18px 0;
+  font-size: 25px;
+}
 .room_content_main {
   max-width: 1273px;
   margin: 0 auto;
@@ -26,7 +30,7 @@ main .banner_room img {
   grid-template-columns: 1fr 1fr 1fr;
   border-bottom: 1px solid #cd9a2b;
   margin-bottom: 20px;
-  padding: 10px;
+  padding: 10px 24px;
   row-gap: 12px;
 }
 .product-summary {
