--- a/public/admin.css
+++ b/public/admin.css
@@ -16,6 +16,12 @@ html{
     font-family: 'Poppins', sans-serif !important;
     
 }
+.book_thongke{
+    display: grid !important;
+    grid-template-columns: 1fr 1fr;
+    padding-top: 20px;
+    
+}
 body{
     background-color: #f5f6f8;
 }
